text alignment issue in blog card has been fixed (#79)
* issue on scroll to top icon fixed

* text alignment issue in blog card fixed

* issue on scroll to top icon fixed - both icons are centered

* issue with the scroll to top button fixed

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -5,13 +5,21 @@
   opacity: 0.2;
 }
 
+.card-title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .card {
   width: 20rem;
   border-radius: 5px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: box-shadow 0.2s ease-in-out, transform 0.35s ease-in-out;
   &:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
 
   .card-blog {
@@ -59,11 +67,11 @@
       align-items: stretch;
     }
   }
-  
-  .row.align-items-stretch .card:only-of-type { 
-    height: 100%; 
+
+  .row.align-items-stretch .card:only-of-type {
+    height: 100%;
   }
-  
+
   .card-img-top {
     border-radius: 5px 5px 0px 0px;
     height: 180px;
@@ -79,12 +87,12 @@
     object-fit: cover;
     object-position: center center;
   }
-  
+
   .card-description {
     font-family: "Roboto Regular";
     font-size: 15px;
   }
-  
+
   .card-tag {
     background: $tag-background-light;
     font-size: 11px;
@@ -92,57 +100,58 @@
     margin-right: 0.3rem;
     margin-bottom: 0.5rem;
   }
-  
+
   .row a {
     text-decoration: none;
   }
-  
+
   .card-datetime {
     margin-left: 5px;
     font-family: "Roboto Medium";
   }
-  
+
   .card-btn {
     background: $card-btn-background-active;
     color: $color-white;
     font-family: "Roboto Regular";
     border-radius: 5px;
   }
-  
+
   .card-btn:hover {
     background: $card-btn-background-hover;
     color: $color-white;
     font-family: "Roboto Bold";
   }
-  
-  .card-btn:focus, .card-btn:active {
+
+  .card-btn:focus,
+  .card-btn:active {
     outline: none !important;
     box-shadow: none;
   }
-  
+
   .card-btn::after {
     background: $card-btn-background-active;
   }
 
   .card-blog-emoji {
-    content: url('../assets/emoji/hand_write.png');
+    content: url("../assets/emoji/hand_write.png");
     width: 20px;
   }
 
   .card-calendar-emoji {
-    content: url('../assets/emoji/calendar.png');
+    content: url("../assets/emoji/calendar.png");
     width: 18px;
     height: 18px;
   }
 
   .card-event-calendar-emoji {
-    content: url('../assets/emoji/calendar.png');
+    content: url("../assets/emoji/calendar.png");
     width: 18px;
     height: 18px;
   }
 
   .card-webina-calendar-emoji {
-    content: url('../assets/emoji/calendar.png');
+    content: url("../assets/emoji/calendar.png");
     width: 18px;
     height: 18px;
   }
@@ -151,7 +160,7 @@
     margin-left: 5px;
     margin-top: auto;
     font-size: 26px;
-  } 
+  }
 
   .social-media-section {
     position: absolute;
